Update project - added deploy classpath